Somewhere along the line the css got out of alignment with the code. Fixes ticket #636.
git-svn-id: https://svn.habariproject.org/habari/trunk/htdocs/system@2919 653ae4dd-d31e-0410-96ef-6bf7bf53c507

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -574,7 +574,7 @@ p:hover > label.abovecontent {
 	color: #222;
 }
 
-body.page-Publish .buttons input {
+body.page-publish .buttons input {
 	float: right;
 }
 
